Fix black bars on mobile

--- a/screen.css
+++ b/screen.css
@@ -63,7 +63,7 @@ html {
 }
 
 body {
-  margin: 0 5%;
+  padding: 0 5%;
   background-color: #141414; /* Equidistant Off-black */
 }
 
